--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "terminal.integrated.shell.windows":"C:\\Windows\\System32\\cmd.exe"
-    "terminal.integrated.shellArgs.windows": ["/K", "D:\\anaconda\\Scripts\\activate.bat D:\\anaconda"]
+    "terminal.integrated.shell.windows":"C:\\Windows\\System32\\cmd.exe",
+    "terminal.integrated.shellArgs.windows": ["/K", "D:\\anaconda\\Scripts\\activate.bat D:\\anaconda"],
+    "python.languageServer":"Pylance"
 }
